objects/Account.object
<CustomObject>
    <fields>
        <fullName>WT_DUNS_Address_Locality__c</fullName>
        <description>stores the locality name from DnB</description>
        <encryptionScheme>None</encryptionScheme>
        <label>DUNS Address Locality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_DUNS_Address_Longitude__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DUNS Address Longitude</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_DUNS_Address_Postal_Code__c</fullName>
        <description>zip code from DnB</description>
        <encryptionScheme>None</encryptionScheme>
        <label>DUNS Address Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_DUNS_Address_Region_Name__c</fullName>
        <description>2 character region code from DnB (typically the state)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>DUNS Address Region Name</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_DUNS_Banks_Name__c</fullName>
        <description>DnB field storing entity bank name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>DUNS Banks Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_DUNS_Charter_Description__c</fullName>
        <description>Field for storing the DnB Charter Description, whether or not a company is for profit.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>WT_DUNS_Charter_Description</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_DUNS_Company_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DUNS Company Start Date</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_DUNS_Country_Code__c</fullName>
        <description>stores the 2 character country code from DnB</description>
        <encryptionScheme>None</encryptionScheme>
        <label>DUNS Country Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_DUNS_Domestic_DUNS__c</fullName>
        <description>stores the DnB Domestic Ulimate DUNS</description>
        <label>DUNS Domestic DUNS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_DUNS_Domestic_Primary_Name__c</fullName>
        <description>stores the DnB Domestic Primary Name of the entity</description>
        <encryptionScheme>None</encryptionScheme>
        <label>DUNS Domestic Primary Name</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_DUNS_Email__c</fullName>
        <description>Stores the email from DnB</description>
        <encryptionScheme>None</encryptionScheme>
        <label>DUNS Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>WT_DUNS_Entity_Type_Description__c</fullName>
        <description>stores DnB info abouit the company structure, proprietorship vs corporation etc.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>WT_DUNS_Entity_Type_Description</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_DUNS_Global_Number_Of_Employees__c</fullName>
        <label>DUNS Global Number Of Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_DUNS_Headquarter_Duns__c</fullName>
        <label>DUNS Headquarter Duns</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_DUNS_Headquarter_Primary_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DUNS Headquarter Primary Name</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_DUNS_Incorporated_Date__c</fullName>
        <description>Stores the Incorporated Date from DnB of the entity</description>
        <encryptionScheme>None</encryptionScheme>
        <label>DUNS Incorporated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WT_DUNS_Is_Exporter__c</fullName>
        <description>DnB field to show if an entity is an exporter.</description>
        <label>DUNS Is Exporter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_DUNS_Is_Importer__c</fullName>
        <description>DnB field to determine if an entity is an importer</description>
        <label>DUNS Is Importer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_DUNS_Is_Manufacturing_Location__c</fullName>
        <description>DnB shows if entity is a manufacturer</description>
        <label>DUNS Is Manufacturing Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_DUNS_Is_Registered_Address__c</fullName>
        <description>DnB field shows if the primary address is the registered address for the entity</description>
        <label>DUNS Is Registered Address</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_DUNS_Is_Residential__c</fullName>
        <description>DnB field that shows if the listed address/location is a residential address</description>
        <label>DUNS Is Residential</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_DUNS_Is_Small_Business__c</fullName>
        <description>DnB field for dictating if an entity is a small business</description>
        <label>DUNS Is Small Business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_DUNS_Level__c</fullName>
        <description>DNB field that stores the level in a larger corporation hierarchy the current entity sits</description>
        <label>DUNS Level</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_DUNS_Name__c</fullName>
        <description>DnB Field for capturing the Primary Name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>DUNS Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_DUNS_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>DUNS Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_DUNS_Operation_Type_Description__c</fullName>
        <description>DnB field that shows if an entity is a franchisor or franchisee</description>
        <encryptionScheme>None</encryptionScheme>
        <label>DUNS Operation Type Description</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_DUNS_Organization_Size__c</fullName>
        <description>Field to store the DnB organization size description</description>
        <encryptionScheme>None</encryptionScheme>
        <label>WT_DUNS_Organization_Size</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_DUNS_Parent_DUNS__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DUNS Parent DUNS</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_DUNS_Parent_Primary_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DUNS Parent Primary Name</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_DUNS_Phone__c</fullName>
        <description>DnB field for capturing the phone number.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>DUNS Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>WT_DUNS_Primary_Industry_Code__c</fullName>
        <description>DnB Indutsry Code Category</description>
        <encryptionScheme>None</encryptionScheme>
        <label>DUNS Primary Industry Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_DUNS_Primary_Industry_Desc__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DUNS Primary Industry Desc</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_DUNS_Registered_Name__c</fullName>
        <description>DnB field for the Company Registered Name where Available.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>WT_DUNS_Registered_Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_DUNS_Single_Entity__c</fullName>
        <description>DnB Field for capturing whether this company is a standalone company.</description>
        <label>DUNS Single Entity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_DUNS_Ultimate_DUNS__c</fullName>
        <description>DnB field that stores the ultimate DUNS</description>
        <label>DUNS Ultimate DUNS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_DUNS_Ultimate_Primary_Name__c</fullName>
        <description>DnB Field for the ultimate primary name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>DUNS Ultimate Primary Name</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_DUNS_Ultimate_Tree_Count__c</fullName>
        <description>DnB Field that shows the total number of entities in a corporate hierarchy.</description>
        <label>DUNS Ultimate Tree Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Date_Of_Death__c</fullName>
        <description>Part of SGE-849</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Of Death</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WT_Date_Provided_Permission_To_Contact__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Provided Permission To Contact</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WT_Date_of_Last_WFG_Review__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date of Last WFG Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WT_Debit_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Debit Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Deceased__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Part of SGE-849</description>
        <label>Deceased</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Direct_Deposit__c</fullName>
        <label>Direct Deposit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Drivers_License_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Driver’s License Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_ERP_Accounting_System_Text__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ERP/Accounting System Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_ERP_Accounting_System__c</fullName>
        <label>ERP/Accounting System</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Abila MIP Fund Accounting</fullName>
                </value>
                <value>
                    <fullName>Accounting CS</fullName>
                </value>
                <value>
                    <fullName>Acumatica</fullName>
                </value>
                <value>
                    <fullName>Blackbaud Financial Edge</fullName>
                </value>
                <value>
                    <fullName>Blackbaud Financial Edge/NXT</fullName>
                </value>
                <value>
                    <fullName>Deltek Vision</fullName>
                </value>
                <value>
                    <fullName>Elite/Pro Law</fullName>
                </value>
                <value>
                    <fullName>Ellucian Banner</fullName>
                </value>
                <value>
                    <fullName>EpiCor</fullName>
                </value>
                <value>
                    <fullName>ERA-Ignite</fullName>
                </value>
                <value>
                    <fullName>Financial Force</fullName>
                </value>
                <value>
                    <fullName>Info CloudSuite</fullName>
                </value>
                <value>
                    <fullName>JD Edwards Enterprise One</fullName>
                </value>
                <value>
                    <fullName>Jenzabar</fullName>
                </value>
                <value>
                    <fullName>Macoia Software</fullName>
                </value>
                <value>
                    <fullName>MatrixCare</fullName>
                </value>
                <value>
                    <fullName>Microsoft Dynamics 365 Business</fullName>
                </value>
                <value>
                    <fullName>Microsoft Dynamics GP</fullName>
                </value>
                <value>
                    <fullName>Microsoft Dynamics NAV</fullName>
                </value>
                <value>
                    <fullName>Microsoft Dynamics SL</fullName>
                </value>
                <value>
                    <fullName>MRI Software</fullName>
                </value>
                <value>
                    <fullName>Oracle eBusiness Suite</fullName>
                </value>
                <value>
                    <fullName>Oracle NetSuite</fullName>
                </value>
                <value>
                    <fullName>Other ERP/Accounting System</fullName>
                </value>
                <value>
                    <fullName>QAD ERP</fullName>
                </value>
                <value>
                    <fullName>QuickBooks Desktop</fullName>
                </value>
                <value>
                    <fullName>QuickBooks Online</fullName>
                </value>
                <value>
                    <fullName>RealPage Accounting</fullName>
                </value>
                <value>
                    <fullName>Sage 100 (Standard, Advanced and Premium</fullName>
                </value>
                <value>
                    <fullName>Sage 100 Contractor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Elavon_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Elavon Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Elavon__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Elavon?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Email_Primary_Contact__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email–Primary Contact (Banker Entered)**</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>WT_Employee_Indicator__c</fullName>
        <label>Employee Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Employees_InfoUSA__c</fullName>
        <label>Employees - InfoUSA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_First_Date_Of_Contact__c</fullName>
        <description>Created as part of DBSFCRM-771 to populate Roll up First Date Of Contact</description>
        <encryptionScheme>None</encryptionScheme>
        <label>First Date Of Contact</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WT_First_Interaction__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>First Interaction</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WT_Focus_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Top Organization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Foreign_Ownership__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Foreign Ownership</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Franchise_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Franchise Type</label>
        <referenceTo>WT_Franchise_Type__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WT_Funds_Management_Company__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Funds Management Company</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Has_Given_Permission_To_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Given Permission To Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Head_of_Household_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Head of Household</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Head_of_RG__c</fullName>
        <label>Head of RG</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Household_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Household ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_IDA_Verification_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>IDA Verification Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_I_Business_Banking_BEB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I-Business Banking (BEB)?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_In_Out_CRA_Assessment_Area__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In/Out CRA Assessment Area</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Incumbent_Former_Bank_lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incumbent/Former Bank (lookup)**</label>
        <referenceTo>WT_Competitor__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WT_InfoUSA_Prospect_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>InfoUSA Prospect ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Insurance_Agent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Insurance Agent**</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Investment_Relationship__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Investment Relationship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_IsProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when Account is added to Campaign Member.</description>
        <label>Is Processed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Is_Duplicate_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is created to merge the duplicate accounts</description>
        <label>Is Duplicate Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Last_8_Of_Debit_Card__c</fullName>
        <description>created as part of DBSFCRM-1747</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Eight Digits Of Debit Card</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Last_Date_Of_Contact__c</fullName>
        <description>Created as part of DBSFCRM-771 to populate Last Date Of Contact</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Date Of Contact</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WT_Latitude__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Latitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Lawyer__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Lawyer**</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Location__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Location</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Longitude__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Longitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Low_to_Mod_Income_Minority_Tract__c</fullName>
        <label>Low to Mod Income/Minority Tract?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low to Mod Income and Minority Tract</fullName>
                </value>
                <value>
                    <fullName>Low to Moderate Income ONLY</fullName>
                </value>
                <value>
                    <fullName>Minority Tract ONLY</fullName>
                </value>
                <value>
                    <fullName>Neither</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_MDM_Household_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>MDM Household ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>WT_MDM_Record_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>MDM Record ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>WT_MDM_Relationship_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>MDM Relationship ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>WT_MSD_MDM_Record_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MSD MDM Record ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Mileage_To_Closest_Branch__c</fullName>
        <label>Mileage To Closest Branch</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Mobile_Banking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Banking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Modified_By_On__c</fullName>
        <formula>LastModifiedBy.FirstName +&apos; &apos;+LastModifiedBy.LastName + TEXT(LastModifiedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Modified By/On</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Mortgage_Officer_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mortgage Officer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Mortgage_Officer_Number__c</fullName>
        <description>Created as a part of DBSFCRM-122</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Mortgage Officer Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Mortgage_Officer_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as a part of DBSFCRM-122</description>
        <label>Mortgage Officer User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WT_NAICS_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NAICS Code</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_No_Checking_Household__c</fullName>
        <label>No Checking Household</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_No_Loan_Household__c</fullName>
        <label>No Loan Household</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_No_of_Employees_Banker__c</fullName>
        <label>No. of Employees (Banker)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2 to 4</fullName>
                </value>
                <value>
                    <fullName>5 to 9</fullName>
                </value>
                <value>
                    <fullName>10 to 24</fullName>
                </value>
                <value>
                    <fullName>25 to 49</fullName>
                </value>
                <value>
                    <fullName>50 to 99</fullName>
                </value>
                <value>
                    <fullName>100 to 249</fullName>
                </value>
                <value>
                    <fullName>250 to 499</fullName>
                </value>
                <value>
                    <fullName>500 to 999</fullName>
                </value>
                <value>
                    <fullName>1,000 to 2,499</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Undefined/Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Online_Banking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Online Banking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Organization_Type__c</fullName>
        <label>Organization Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Parent_Relationship_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DBSFCRM-1583</description>
        <label>Parent Relationship Group</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Parent Relationship Group)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WT_Password__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Previous_Month_End_Date__c</fullName>
        <description>Created as a part of DBSFCRM-122</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Previous Month&apos;s End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WT_Primary_Contact_Name_Banker_Entered__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary Contact Name (Banker Entered)</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Primary_Contact_Name_DNB__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary Contact Name (DNB)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Primary_Contact_Name_InfoUSA__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary Contact Name (InfoUSA)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Primary_Contact_Name_Ranked__c</fullName>
        <formula>IF( NOT(ISBLANK(  WT_Primary_Contact_Name_Banker_Entered__c )) , WT_Primary_Contact_Name_Banker_Entered__c  ,IF( NOT(ISBLANK(  WT_Primary_Contact_Name_DNB__c  )) ,WT_Primary_Contact_Name_DNB__c   , IF( NOT(ISBLANK(  WT_Primary_Contact_Name_InfoUSA__c )) ,WT_Primary_Contact_Name_InfoUSA__c, &apos;&apos;)))</formula>
        <label>Primary Contact Name (Ranked)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Primary_Email_DNB__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary Email (DNB)</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>WT_Primary_Email_InfoUSA__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary Email  (InfoUSA)</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>WT_Primary_Email_Ranked__c</fullName>
        <formula>IF ( NOT(ISBLANK(WT_Email_Primary_Contact__c )),WT_Email_Primary_Contact__c ,IF(  NOT(ISBLANK( WT_Primary_Email_DNB__c )) , WT_Primary_Email_DNB__c ,IF(  NOT(ISBLANK( WT_Primary_Email_InfoUSA__c )) ,WT_Primary_Email_InfoUSA__c , &apos;&apos;) ) )</formula>
        <label>Primary Email (Ranked)</label>
        <type>Text</type>
    </fields>
</CustomObject>